--- a/.env.backup
+++ b/.env.backup
@@ -34,14 +34,14 @@ AUTHORIZATION_API_INTEGRATION="Bearer 114|LuhhnXez3aq5tl9CGzdBH0NoNLA4HkMg9777vD
 # SEARCH PARAMETERS (Parámetros de Búsqueda Dinámicos)
 # =============================================================================
 # Coordenadas geográficas de la búsqueda
-SEARCH_LATITUDE=-38.0054771
-SEARCH_LONGITUDE=-57.542610599999996
+SEARCH_LATITUDE=-37.164258
+SEARCH_LONGITUDE=-56.9030558
 
 # Radio de búsqueda en metros
 SEARCH_DISTANCE_RADIUS=30000
 
 # Nombre de la ubicación (usado en los reportes)
-SEARCH_LOCATION_NAME="Mar del Plata, Provincia de Buenos Aires, Argentina"
+SEARCH_LOCATION_NAME="Cariló, Provincia de Buenos Aires, Argentina"
 
 # Fechas de búsqueda (días desde hoy)
 SEARCH_START_DATE=30  # Check-in en 30 días desde hoy
@@ -135,7 +135,7 @@ LOG_FILE=logs/test-results.log
 #
 # Test con configuración temporal:
 # MAX_HOTELS_TO_TEST=10 npm run dev
-# SEARCH_LATITUDE=-38.0054771
+# SEARCH_LATITUDE=-37.164258
 #
 # Ver configuración actual:
 # grep SEARCH_ .env
