fix(api): tighten types in server.ts and add GET handler; ensure proper string casting for env, token and location_search

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "author": "PXSOL Development Team",
   "license": "MIT",
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
