--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts development",
+    "dev": "nodemon --watch src --ext ts,json --signal SIGTERM --exec ts-node src/server.ts",
     "prod": "ts-node src/index.ts production",
     "compare": "ts-node src/index.ts compare",
     "test": "jest",
@@ -17,7 +17,8 @@
     "setup": "chmod +x scripts/*.sh && ./scripts/install-dependencies.sh",
     "example": "chmod +x scripts/run-example.sh && ./scripts/run-example.sh",
     "clean": "rm -rf dist reports logs coverage",
-    "serve-api": "ts-node src/server.ts"
+    "serve-api": "ts-node src/server.ts",
+    "serve:watch": "nodemon --watch src --ext ts,json --signal SIGTERM --exec ts-node src/server.ts"
   },
   "keywords": [
     "api-testing",
@@ -36,6 +37,7 @@
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
